Fixed recipe card listing from being too wide

--- a/allen/card.css
+++ b/allen/card.css
@@ -9,7 +9,7 @@
 
 .recipe-listing-inner-wrapper {
 	margin: auto;
-	padding: 0 10px 0 35px;
+	padding: 0 0 0 25px;
 	text-align: center;
 }
 
@@ -28,13 +28,13 @@
 	}
 }
  
-@media (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 801px) and (max-width: 1200px) {
 	.recipe-listing {
 		width: 750px;
 	}
 }
  
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 800px) {
 	.recipe-listing {
 		width: 375px;
 	}
